# conan_cpack_example

./: CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: gcc12
src/: main.cpp
